refactor: getSyncTransaction() 반환 부분 수정